Robot replies with json object

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hubot-adapter",
   "version": "0.0.1",
   "description": "hubot chat adapter",
-  "main": "./src/index.coffee",
+  "main": "./src/sample.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
